2007-09-13  James Tanis  <jtt@outpost.tanis.org>

	* lib/b_getbyfoo.c (bk_ether_aton): Convert a string ethernet
	address to struct ether.
	(bk_ether_ntoa): Convert a struct ether to a ethernet address
	string. 

 2007-06-19  James Tanis  <jtt@outpost.tanis.org>
	
	* lib/b_ringdir.c (bk_ringdir_get_status): Work aroundf fencepost
	error. May need to be reworked later.

2007-05-02  Alexander Dupuy  <alex.dupuy@counterstorm.com>

	* lib/b_ringdir.c (bk_ringdir_get_status): #9000: handle rings starting
	at 1 instead of 0

2007-04-09  Alexander Dupuy  <alex.dupuy@counterstorm.com>

	* lib/b_shmipc.c: acknolwedged

2007-02-21  James Tanis  <jtt@counterstorm.com>

	* test/entropy/Makefile, lib/Makefile: $(BK_LIBM) is now obsolete

	* Makefile, include/Makefile: All user to selectively *not* compile in
	several baka features

2007-01-15  Seth Robertson  <seth@counterstorm.com>

	* test/test_threads.c: reversed test

2007-01-12  Brian Lindauer  <lindauer@counterstorm.com>

	* test/test_threads.c: #8756: Save someone a rollup headache.

2007-01-11  James Tanis  <jtt@counterstorm.com>

	* lib/b_procinfo.c, test/test_proc.c: New file.

2007-01-11  Alex Dupuy  <alex.dupuy@counterstorm.com>

	* lib/b_string.c (bk_vstr_cat): fix problems with "improved" allocation
	
2007-01-11  James Tanis  <jtt@swift.sysdetect.com>

	* lib/b_procinfo.c: Routines which handle the process table.

2006-11-15  Seth Robertson  <seth@counterstorm.com>

	* src/timeout.c: #8646: "if (finished) sleep(timeout)" has a race if
	the child is reaped between the test of finished and the sleep.  Using
	alarm should in theory fix this which we are seeing at BAE continually,
	unlike everywhere else.

2006-10-12  Alexander Dupuy  <alex.dupuy@counterstorm.com>

	* src/timeout.c: #8590: eliminate signal handler race condition that
	returned timeout status (SIGALRM) if child finished just fast enough

2006-09-28  James Tanis  <jtt@counterstorm.com>

	* lib/b_string.c: Eliminate useless debugging #defines
