@@ -1,5 +1,5 @@
 /*
- * $Id: libbk.h,v 1.345 2007/11/28 22:32:01 jtt Exp $
+ * $Id: libbk.h,v 1.346 2007/12/04 05:20:34 jtt Exp $
  *
  * ++Copyright LIBBK++
  *
@@ -1639,8 +1639,7 @@ extern void *bk_memx_get(bk_s B, struct bk_memx *bm, u_int count, u_int *curused
 extern int bk_memx_addstr(bk_s B, struct bk_memx *bm, char *str, bk_flags flags);
 extern int bk_memx_trunc(bk_s B, struct bk_memx *bm, u_int count, bk_flags flags);
 extern int bk_memx_lop(bk_s B, struct bk_memx *bm, u_int count, bk_flags flags);
-int bk_memx_append(bk_s B, struct bk_memx *bm, const void *data, u_int32_t len, bk_flags flags);
-
+extern int bk_memx_append(bk_s B, struct bk_memx *bm, const void *data, u_int count, bk_flags flags);
 
 /* b_run.c */
 extern struct bk_run *bk_run_init(bk_s B, bk_flags flags);
