@@ -1,6 +1,6 @@
 #if !defined(lint) && !defined(__INSIGHT__)
 #include "libbk_compiler.h"
-UNUSED static const char libbk__rcsid[] = "$Id: b_memx.c,v 1.16 2006/03/20 20:48:46 lindauer Exp $";
+UNUSED static const char libbk__rcsid[] = "$Id: b_memx.c,v 1.17 2007/12/04 05:20:33 jtt Exp $";
 UNUSED static const char libbk__copyright[] = "Copyright (c) 2003";
 UNUSED static const char libbk__contact[] = "<projectbaka@baka.org>";
 #endif /* not lint */
@@ -313,12 +313,12 @@ int bk_memx_addstr(bk_s B, struct bk_memx *bm, char *str, bk_flags flags)
  * @param B Baka Thread/global environment
  * @param bm Memx structure
  * @param data Data to append
- * @param len Length of data to append
+ * @param count The number of units to append
  * @param flags Fun for the future
  * @return <i>-1</i> on failure
  * @return <i>0</i> on success
  */
-int bk_memx_append(bk_s B, struct bk_memx *bm, const void *data, u_int32_t len, bk_flags flags)
+int bk_memx_append(bk_s B, struct bk_memx *bm, const void *data, u_int count, bk_flags flags)
 {
   BK_ENTRY(B, __FUNCTION__, __FILE__, "libbk");
   void *new;
@@ -329,16 +329,16 @@ int bk_memx_append(bk_s B, struct bk_memx *bm, const void *data, u_int32_t len, 
     BK_RETURN(B, -1);
   }
 
-  if (!len)
+  if (!count)
     BK_RETURN(B, 0);
 
-  if (!(new = bk_memx_get(B, bm, len, NULL, BK_MEMX_GETNEW)))
+  if (!(new = bk_memx_get(B, bm, count, NULL, BK_MEMX_GETNEW)))
   {
     bk_error_printf(B, BK_ERR_ERR, "Could not obtain space to append data.\n");
     goto error;
   }
 
-  memcpy(new, data, len);
+  memcpy(new, data, count * bm->bm_unitsize);
 
   BK_RETURN(B, 0);
 
